# Dypsten

./: .gitignore  CNAME  README.md  RUN_ME.md  docker-compose.yml
backend/: .env.example  __init__.py  pyproject.toml  requirements-api.txt  requirements.txt
backend/alerts/: __init__.py  alert_manager.py
backend/api/: __init__.py  main.py
backend/config/: config.py
backend/data/: data_preprocessor.py  dem_ingestion.py  synthetic_generator.py
backend/digital_twin/: stress_simulator.py  terrain_builder.py
backend/models/: cnn_model.py  ensemble_engine.py  lstm_model.py  physics_guardrail.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AlertControl.css  AlertControl.tsx  AlertFeed.css  AlertFeed.tsx  Dashboard.css  Dashboard.tsx  DigitalTwin.css  DigitalTwin.tsx  PredictionChart.css  PredictionChart.tsx  RiskGauge.css  RiskGauge.tsx  SensorGrid.css  SensorGrid.tsx
frontend/src/pages/: LandingPage.css  LandingPage.tsx
